2003-07-14  Kingpin  <mthurn@megapipe.net>

	* lib/WWW/Search/Yahoo/TV/Echostar.pm: new backend

2003-07-13  Kingpin  <mthurn@megapipe.net>

	* lib/WWW/Search/Yahoo/DE.pm: new backend donated by Roland Moriz <roland at moriz.de>

2003-06-24  Kingpin  <mthurn@megapipe.net>

	* lib/WWW/Search/Yahoo/Japan/News.pm: fix parsing for new yahoo.co.jp page format

2003-05-14  Kingpin  <mthurn@megapipe.net>

	* lib/WWW/Search/Yahoo.pm (parse_tree): fix parsing for new yahoo.com page format

2003-01-23  Kingpin  <mthurn@carbon>

	* lib/WWW/Search/Yahoo.pm (parse_tree): fix parsing for new yahoo.com page format

2002-12-20  Kingpin  <mthurn@carbon.>

	* lib/WWW/Search/Yahoo.pm (parse_tree): make sure result count is taken from "Web Matches" section

	* lib/WWW/Search/Yahoo/Japan/News.pm (parse_tree): ignore yahoo.co.jp links that look like hit results:

	* lib/WWW/Search/Yahoo.pm (parse_tree): do not follow "next" link if result count is being spoofed

2002-11-08  Kingpin  <mthurn@carbon.>

	* Makefile.PL: add prereq Date::Manip

	* lib/WWW/Search/Yahoo.pm (parse_tree): FIX pattern for result-count integer match

2002-11-01  Kingpin  <mthurn@carbon.>

	* lib/WWW/Search/Yahoo.pm (native_setup_search): new URL
	(parse_tree): tweak parser for new webpage format

	* lib/WWW/Search/Yahoo/News/Advanced.pm (parse_tree): overhaul for new webpage format

	* test.pl: switch to Test::More; all tests pass as of today

2002-10-01  Kingpin  <mthurn@carbon.>

	* lib/WWW/Search/Yahoo.pm (gui_query): new URL google.yahoo.com

2002-03-29  Kingpin  <mthurn@copper.dulles.tasc.com>

	* lib/WWW/Search/Yahoo.pm (parse_tree): even more cleanup of title & description

2002-03-28  Kingpin  <mthurn@copper.dulles.tasc.com>

	* lib/WWW/Search/Yahoo.pm (parse_tree): clean up description

2001-12-24  Kingpin  <mthurn@copper.dulles.tasc.com>

	* lib/WWW/Search/Yahoo.pm (gui_query): FIXED for not passing debug argument(s)
	(parse_tree): fix for slightly changed output format
